# opengl_water

./: .gitignore  CMakeLists.txt  README.md  format.sh
src/: glfw.h  globals.h  main.cpp  shader.h  water.cpp  water.hpp  window.hpp
src/components/: camera.cpp  camera.h  camera.hpp  editor_camera.cpp  editor_camera.h  editor_camera.hpp  renderer.cpp  renderer.h  renderer.hpp  rotation_camera.h  rotation_camera.hpp  transform.h  transform.hpp  water.cpp  water.h  water.hpp
src/engine/: component.cpp  component.h  component.hpp  engine.cpp  engine.h  engine.hpp  entity.cpp  entity.h  glfw.cpp  glfw.h  globals.cpp  globals.h  meta.h  opengl.h  window.cpp  window.h
src/gl/: draw_type.hpp  error.hpp  gl.hpp  shader.cpp  shader.hpp  type_traits.hpp  vertex_array.hpp
src/shaders/: water_fragment.glsl  water_tess_control.glsl  water_tess_eval.glsl  water_vertex.glsl
